Fixed bugs on mobile

--- a/Search/styles/item_history.css
+++ b/Search/styles/item_history.css
@@ -13,8 +13,8 @@
 
 .review-grid{
     border: 3px solid red;
-    width: 85rem;
-    height: 55rem;
+    width: 80%;
+    height: 80%;
     padding: 1rem;
 
     background-color: #2c2929;
@@ -50,7 +50,8 @@
 .exit-history-div{
     margin-left: 1rem;
     margin-right: 1rem;
-    width: 7%;
+    width: 5%;
+    height: 50%;
 }
 .exit-history-button{
     margin-right: 0;
@@ -66,6 +67,7 @@
     height: fit-content;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     padding: 1rem;
     grid-column: 1/3;
     margin: 1rem;
@@ -80,22 +82,23 @@
     padding-top: 1.1rem;
     padding-left: 0.5rem;
     text-align: center;
+    height: fit-content;
 }
 .review-item-date{
-    width: 18%;
+    width: fit-content;
     justify-self: flex-start;
     font-weight: 600;
 }
 .review-item-season{
-    width: 20%;
+    width: fit-content;
     font-weight: 500;
 }
 .review-item-episode{
-    width: 20%;
+    width: fit-content;
     font-weight: 500;
 }
 .review-item-score{
-    width: 20%;
+    width: fit-content;
     font-weight: 500;
 }
 .review-item-note{
