--- a/z.Responsive/review_popup.css
+++ b/z.Responsive/review_popup.css
@@ -92,6 +92,7 @@
     .review-rating{
         width: 5%;
         height: 10%;
+        font-size: 1rem;
     }
     .review-notes{
         height: 30%;
@@ -139,6 +140,16 @@
     .review-notes{
         height: 20%;
     }
+    .review-rating {
+        font-size: 0.9rem;
+        width: 20%;
+    }
+    .review-season,
+    .review-episode,
+    .review-date{
+        width: 25%;
+        height: 10%;
+    }
 
 }
 @media screen and (max-width: 320px) {
@@ -148,6 +159,10 @@
     .last-review-score{
         font-size: 0.6rem;
         width: 40%;
+    }
+    .review-rating {
+        font-size: 0.7rem;
+        width: 15%;
     }
     .review-notes{
         height: 12%;
